Fixed edit and delete meteadata buttons not being visible on smaller screens

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -432,7 +432,8 @@ table.metadata tr .buttons button svg {
 table.metadata tr:hover .buttons,
 table.metadata tr:focus-within .buttons {
   display: flex;
-  gap: 10px;
+  min-width:fit-content;
+  gap: 6px;
 }
 
 table.metadata tr:last-of-type {
